--- a/index.html
+++ b/index.html
@@ -72,6 +72,26 @@
     </div>
   </nav>
 
+  <div id="homePageDiv">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-sm-12">
+          <h1 class="home-h1">Open Cockpit Biplane and Texan Plane Rides</h1>
+        </div>
+        <div class="col-sm-6">
+          <p class="home-paragraph">A rare and historic opportunity awaits! Open Cockpit Biplane Flying!! View renowned Sonoma & Napa Wine Country in beautifully restored WWII Boeing Stearman biplanes! Kick it up a notch and add the loops and rolls to your biplane experience. We also fly WWII fighters - The AT6 Texan, The P51 Mustang and the very rare P40 Warhawk. Flying happy passengers since 1975.</p>
+          <a href="https://www.youtube.com/watch?v=A81sqeZKQNQ 
+          https://www.instagram.com/p/B9afHUdhdy9/" target="_blank">
+            <button class="btn btn-primary">
+              Watch Biplane Video Here
+            </button>
+        </a>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+  
 
   
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
