--- a/index.html
+++ b/index.html
@@ -87,7 +87,25 @@
             </button>
         </a>
         </div>
-        
+        <div class="col-sm-6 pt-3">
+          <a href="flight-rates.html" target="_blank">
+            <img src="img/newhome1.png" alt="" class="img-fluid home-img">
+          </a>
+          <a href="flight-rates.html#texan-prices" target="_blank" class="">
+            <img src="img/newhome2.png" alt="" class="img-fluid home-img2">
+          </a>
+          <a href="https://www.instagram.com/p/B9afHUdhdy9/" target="_blank" class="">
+            <img src="img/newhome3.png" alt="" class="img-fluid home-img3">
+          </a>
+          <a href="gallery.html#p40-home" target="_blank" class="">
+            <img src="img/newhome4.png" alt="" class="img-fluid home-img4">
+          </a>
+          <a href="flight-rates.html">
+            <button class="btn btn-primary home-rates-btn mb-2">
+              Flight Rates Here
+            </button>
+          </a>
+        </div>
       </div>
     </div>
   </div>
